# surface-nets-experiment

./: Cargo.toml  README.md  benchmark.md
src/: chunk.rs  chunk_map.rs  chunk_world.rs  constants.rs  debug.rs  generator.rs  main.rs  meshing.rs  sdf_primitives.rs
src/generation/: generator.rs  mod.rs  sdf.rs
