[package]
name = "terrain-generation"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
bevy = "0.10.0"
bevy-inspector-egui = "0.18.1"
bevy_egui = "0.20.1"
fast-surface-nets = { path = "../fast-surface-nets-rs" }
futures-lite = "1.12.0"
ilattice = { git = "https://github.com/bonsairobo/ilattice-rs" }
ndcopy = "0.3.0"
noise = "0.8.2"
parking_lot = "0.12.1"
rand = "0.8.5"
simdnoise = "3.1.6"
smooth-bevy-cameras = "0.8.0"
