[package]
name = "terrain-generation"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
bevy_egui = "0.20.2"
concurrent-queue = "2.2.0"
fast-surface-nets = { git = "https://github.com/bonsairobo/fast-surface-nets-rs" }
float-ord = "0.3.2"
futures-lite = "1.12.0"
ilattice = { git = "https://github.com/bonsairobo/ilattice-rs" }
ndcopy = "0.3.0"
noise = "0.8.2"
rand = "0.8.5"
simdnoise = "3.1.6"
smooth-bevy-cameras = "0.8.0"
