[package]
name = "surface-nets-experiment"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
bevy = "0.11.2"
bevy_egui = "0.21.0"
bevy-inspector-egui = "0.19.0"
bracket-noise = "0.8.7"
crossbeam-queue = "0.3.8"
fast-surface-nets = { git = "https://github.com/bonsairobo/fast-surface-nets-rs" }
float-ord = "0.3.2"
futures-lite = "1.12.0"
ilattice = { git = "https://github.com/bonsairobo/ilattice-rs" }
ndcopy = "0.3.0"
once_cell = "1.17.1"
rand = "0.8.5"
simdnoise = "3.1.6"
smooth-bevy-cameras = "0.9.0"
tracing = "0.1"
